--- a/dyplom-WPF/MainWindow.xaml
+++ b/dyplom-WPF/MainWindow.xaml
@@ -1,43 +1,54 @@
-﻿<Window x:Class="dyplom_WPF.MainWindow"
+﻿<!-- WYKONAWCA:  Stanisław Rachwał
+     INDEKS:     180504 
+     KIERUNEK:   Inżynieria Biomedyczna, spec. Fizyka Medyczna 
+     SEMESTR:    7 -->
+
+<Window x:Class="dyplom_WPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:oxy="http://oxyplot.org/wpf"
         mc:Ignorable="d"
-        Title="Panel układu" Height="768" Width="1366">
+        Title="Panel układu" Height="768" Width="1366" d:DataContext="{d:DesignInstance }">
+
+    <!--                                 ZNACZNIKI DEFINIUJĄCE WYGLĄD APLIKACJI                                      -->
+    
     <Grid Background="Azure">
-        <Button x:Name="BtnCheck" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30 30 0 0"
+        <Button x:Name="BtnCheck" Click="BtnCheck_OnClick" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30 30 0 0"
                 Content="Sprawdzenie połączenia ze sterownikiem" Height="30" Width="250"/>
         <Label x:Name="LblName" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="300 30 0 0"
                Content="Nazwa układu" Height="30" Width="150" FontSize="12pt" Foreground="#888888"/>
         
-        <Button x:Name="BtnReset" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30 80 0 0"
-                Content="Konfiguracja wartości referencyjnych" Height="30" Width="250"/>
+        <Button x:Name="BtnReset" Click="BtnReset_OnClick" IsEnabled="False" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30 80 0 0"
+                Content="Ustawienie offsetu i połączenia z shieldem" Height="30" Width="250"/>
         
         <Label x:Name="LblTime" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30 130 0 0"
                Content="Czas pomiaru" Height="30" Width="112" FontSize="12pt"/>
-        <ComboBox x:Name="CmbTime" SelectedIndex="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="150 130 0 0"
+        <ComboBox x:Name="CmbTime" IsEnabled="False" SelectedIndex="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="150 130 0 0"
                   Height="30" Width="130" FontSize="12pt">
             <ComboBoxItem>10 sekund</ComboBoxItem>
-            <ComboBoxItem>20 sekund</ComboBoxItem>
+            <ComboBoxItem>1 sekunda</ComboBoxItem>
             <ComboBoxItem>Pojedynczy</ComboBoxItem>
         </ComboBox>
         
         <Label x:Name="LblType" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30 180 0 0"
-               Content="Podzespół" Height="30" Width="112" FontSize="12pt"/>
-        <ComboBox x:Name="CmbType" SelectedIndex="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="150 180 0 0"
+               Content="Próbkowanie" Height="30" Width="112" FontSize="12pt"/>
+        <ComboBox x:Name="CmbTs" IsEnabled="False" SelectedIndex="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="150 180 0 0"
                   Height="30" Width="130" FontSize="12pt">
-            <ComboBoxItem>Akcelerometr</ComboBoxItem>
-            <ComboBoxItem>Żyroskop</ComboBoxItem>
-            <ComboBoxItem>Oba</ComboBoxItem>
+            <ComboBoxItem>100 ms</ComboBoxItem>
+            <ComboBoxItem>10 ms</ComboBoxItem>
         </ComboBox>
         
-        <Button x:Name="BtnStart" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30 230 0 0"
+        <Button x:Name="BtnStart" IsEnabled="False" Click="BtnStart_OnClick" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30 230 0 0"
                 Content="Wykonaj pomiar" Height="30" Width="250"/>
         
-        <Button x:Name="BtnPlot" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30 280 0 0"
+        <Button x:Name="BtnFile" Click="BtnFile_OnClick" IsEnabled="False" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30 280 0 0"
                 Content="Plik wynikowy" Height="30" Width="110"/>
-        <Button x:Name="BtnShow" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="170 280 0 0"
+        <Button x:Name="BtnShow" Click="BtnShow_OnClick" IsEnabled="False" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="170 280 0 0"
                 Content="Charakterystyka" Height="30" Width="110"/>
+        
+        <TextBox x:Name="TxtStats" IsReadOnly="True" VerticalScrollBarVisibility="Visible" Margin="30 330 0 0"
+                 HorizontalAlignment="Left" VerticalAlignment="Top" Height="340" Width="400"/>
     </Grid>
 </Window>
